--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -29,6 +29,10 @@
     font-size: $fz-xs;
     line-height: $lh-sm;
     margin-bottom: 10px;
+
+    @include tablet {
+      margin-bottom: 8px;
+    }
   }
 
   &__input {
@@ -97,7 +101,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: $gap-xs;
+    gap: 10px;
     width: 100%;
     min-width: 300px;
   }
