--- a/src/styles/layouts/_blog-hero.scss
+++ b/src/styles/layouts/_blog-hero.scss
@@ -12,7 +12,7 @@
     padding-inline: $space-base;
     padding-block: 0;
     border-radius: 100px;
-    margin-bottom: $space-lg;
+    margin-bottom: 28px;
     white-space: wrap;
   }
 
