--- a/src/styles/layouts/_contact-hero.scss
+++ b/src/styles/layouts/_contact-hero.scss
@@ -5,6 +5,10 @@
   padding-block: $space-4xl 0;
   width: 100%;
 
+  &__primary-title {
+    margin-block: 0 20px;
+  }
+
   &__intro {
     display: flex;
     flex-direction: column-reverse;
@@ -20,6 +24,7 @@
     margin-block: $space-0;
     display: flex;
     flex-direction: column;
+    letter-spacing: -0.5px;
   }
 
   &__description {
